force-app/main/default/objects/CS_Task__c/CS_Task__c.object-meta.xml
<CustomObject>
    <description>Tasks related to an engagement</description>
    <label>CS Task</label>
    <nameField>
        <label>CS Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CS Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>