force-app/main/default/objects/CS_Task__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>CS Tasks</relationshipLabel>
    <relationshipName>CS_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>